<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/play_ui_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_ui_head_marginTop"
            android:text="@string/player_ui_track_head"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/player_ui_head_textSize"
            android:textStyle="normal" />


        <androidx.cardview.widget.CardView
            android:id="@+id/play_ui_card_track_art"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/track_name"
            android:layout_below="@id/play_ui_head"
            android:layout_marginStart="@dimen/player_ui_album_art_marginStart"
            android:layout_marginTop="@dimen/player_ui_album_art_marginTop"
            android:layout_marginEnd="@dimen/player_ui_album_art_marginEnd"
            android:layout_marginBottom="@dimen/player_ui_album_art_marginBottom"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp">

            <ImageView
                android:id="@+id/track_art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/player_ui_album_art_description"
                android:src="@drawable/ic_album_cover_default" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/track_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/track_album_name"
            android:layout_marginStart="@dimen/player_ui_track_name_marginStart"
            android:layout_marginEnd="@dimen/player_ui_track_name_marginEnd"
            android:layout_marginBottom="@dimen/player_ui_track_name_marginBottom"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="Song Name[Testing]"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/player_ui_track_name_textSize" />

        <TextView
            android:id="@+id/track_album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/track_seek_bar"
            android:layout_marginStart="@dimen/player_ui_track_album_name_marginStart"
            android:layout_marginEnd="@dimen/player_ui_track_album_name_marginEnd"
            android:layout_marginBottom="@dimen/player_ui_track_album_name_marginBottom"
            android:text="Album[Testing]"
            android:textAlignment="center"
            android:textSize="@dimen/player_ui_track_album_name_textSize" />


        <SeekBar
            android:id="@+id/track_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/track_duration_info"
            android:layout_marginStart="@dimen/player_ui_track_seek_bar_marginStart"
            android:layout_marginEnd="@dimen/player_ui_track_seek_bar_marginEnd"
            android:layout_marginBottom="@dimen/player_ui_track_seek_bar_marginBottom" />

        <LinearLayout
            android:id="@+id/track_duration_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/controls"
            android:layout_marginStart="@dimen/player_ui_track_duration_info_marginStart"
            android:layout_marginEnd="@dimen/player_ui_track_duration_info_marginEnd"
            android:layout_marginBottom="@dimen/player_ui_track_duration_info_marginBottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/track_current_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="02:43[test]"
                android:textSize="@dimen/player_ui_track_duration_info_textSize" />

            <TextView
                android:id="@+id/track_progress_max"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4:30[test]"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/player_ui_track_duration_info_textSize" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_ui_controls_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/player_ui_controls_marginBottom"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/play_prev"
                android:layout_width="@dimen/player_ui_controls_width"
                android:layout_height="match_parent"
                android:contentDescription="@string/player_ui_control_skip_to_prev_description"
                android:src="@drawable/ic_prev" />

            <ImageView
                android:id="@+id/playrpause"
                android:layout_width="@dimen/player_ui_controls_width"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/player_ui_controls_play_or_pause_marginStart"
                android:layout_marginEnd="@dimen/player_ui_controls_play_or_pause_marginEnd"
                android:contentDescription="@string/playing_ui_control_play_or_pause_description"
                android:src="@drawable/ic_baseline_pause_circle_filled_24" />

            <ImageView
                android:id="@+id/play_next"
                android:layout_width="@dimen/player_ui_controls_width"
                android:layout_height="match_parent"
                android:contentDescription="@string/player_ui_control_skip_to_next_description"
                android:src="@drawable/ic_next" />
        </LinearLayout>
    </RelativeLayout>
</layout>